syntax = "proto3";
package seller.v1;
option go_package = "github.com/ihtkas/farm/seller/v1;sellerpb";

import "account/v1/user.proto";
import "google/protobuf/timestamp.proto";

message Profile {
    account.v1.User user = 1;
}


message ProductInfo {
    string name = 1;
    google.protobuf.Timestamp expiry = 2;
    uint32 quantity = 3;
    uint32 min_quantity = 4;
    uint32 price_per_quantity = 5;
    string description = 6;
    repeated string tags = 7;
    double pickup_loc_lat = 8;
    double pickup_loc_lon = 9;
}

message Product {
    string id = 1;
    ProductInfo info = 2;
}

message ProductLocationSearchRequest {
    double pickup_loc_lat = 1;
    double pickup_loc_lon = 2;
    uint32 radius = 3;
    uint32 offset = 4;
    uint32 limit  = 5;
}

message ProductLocationResponse {
    string id = 1;
    ProductInfo info = 2;
    // euclidean distance in meters computed using postgis extension.
    int32 distance = 3;
}


message ProductsByUserRequest {
    string last_timestamp_uuid = 4;
    uint32 limit  = 5;
}



// from repo root directory
// protoc -I proto/ proto/seller/v1/seller.proto --go_out=paths=source_relative:.